--- a/products-project/package.json
+++ b/products-project/package.json
@@ -13,6 +13,9 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@vueuse/core": "^14.1.0",
+    "@vueuse/integrations": "^14.1.0",
+    "focus-trap": "^7.8.0",
     "pinia": "^3.0.4",
     "swiper": "^12.0.3",
     "vue": "^3.5.26",
