--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,10 @@ node_modules
 dist
 dist-ssr
 coverage
-vscode
 *.local
 
 # Editor directories and files
-# .vscode/*
+.vscode/*
 !.vscode/extensions.json
 .idea
 *.suo
